# TearDrops

./: .all-contributorsrc  .dockerignore  .env.sample  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRIVACY.md  Pipfile  README.md  config.toml  docker-compose.yml  main.py  meta.json  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  config.yml  docs.md  feature_request.md  idea_suggesion.md  other.md
.github/resources/: data_log
.github/workflows/: changelog.yml  greetings.yml  testing.yml
bot/: .env.example  Dockerfile  inputs.py  main.py  requirements.txt  setup.py  username.py  utils.py
bot/cogs/: coffee.py  coffee_cog.py  comic.py  comic_cog.py  dictionary.py  economy.py  economy_cog.py  error.py  error_cog.py  events.py  events_cog.py  fun.py  fun_cog.py  game.py  game_cog.py  help.py  help_cog.py  inputs.py  joeUsername.py  meme.py  meme_cog.py  name.py  name_cog.py  ping.py  ping_cog.py  username.py  users.py  users_cog.py  utilities.py  utils.py  utils_cog.py
bot/cogs/fun_cog/: text_cog.py
bot/cogs/utils/: colo.py  embeds.py  inputs.py  joeUsername.py  phrases.py  username.py
legal/: PRIVACY.md
